--- a/data/theeasytueml.json
+++ b/data/theeasytueml.json
@@ -8,5 +8,11 @@
     "percentToQualify": "100",
     "fps": "120",
     "records": [
+        {
+        "user": "finni1505",
+            "link": "https://medal.tv/de/games/geometry-dash/clips/l6lba4VKGUYevC5hA?invite=cr-MSxYV3MsMzY5MjUzOTQw&v=6",
+            "percent": 100,
+            "hz": 120
+            }
     ]
 }
