--- a/data/idontknowtheend.json
+++ b/data/idontknowtheend.json
@@ -5,7 +5,7 @@
     "creators": [],
     "verifier": "DuckInTheUsa",
     "verification": "https://www.youtube.com/watch?v=hcvC81EYcrU",
-    "percentToQualify": "100"
+    "percentToQualify": "100",
     "records": [
     ]
 }
