--- a/data/idontknowtheend.json
+++ b/data/idontknowtheend.json
@@ -13,6 +13,12 @@
             "hz": "60",
             "percent": 100,
             "mobile": "true"
-        }
+        },
+        {
+            "user": "fjkr",
+            "link": "https://medal.tv/ru/games/geometry-dash/clips/liN5gVGiEKG1H1b4T?invite=cr-MSxLY00sNDM2Nzg5MDc5&v=15",
+            "percent": 100,
+            "hz": 200
+            }
     ]
 }
