--- a/data/theeasytueml.json
+++ b/data/theeasytueml.json
@@ -13,6 +13,12 @@
             "link": "https://medal.tv/de/games/geometry-dash/clips/l6lba4VKGUYevC5hA?invite=cr-MSxYV3MsMzY5MjUzOTQw&v=6",
             "percent": 100,
             "hz": 120
-            }
+            },
+        {
+            "user": "FJKR",
+            "link": "https://medal.tv/ru/games/geometry-dash/clips/llZU42zIl-Vl7cyAQ?invite=cr-MSx5ZWssNDM2Nzg5MDc5&v=14",
+            "hz": "120",
+            "percent": 100
+        }
     ]
 }
