--- a/data/theeasytueml.json
+++ b/data/theeasytueml.json
@@ -19,6 +19,12 @@
             "link": "https://medal.tv/ru/games/geometry-dash/clips/llZU42zIl-Vl7cyAQ?invite=cr-MSx5ZWssNDM2Nzg5MDc5&v=14",
             "hz": "120",
             "percent": 100
+        },
+        {
+            "user": "FoldedZero",
+            "link": "https://www.youtube.com/watch?v=d0mlnnUsWFs",
+            "hz": "120",
+            "percent": 100
         }
     ]
 }
