--- a/data/easiesttclship.json
+++ b/data/easiesttclship.json
@@ -26,6 +26,12 @@
             "link": "https://medal.tv/ru/games/geometry-dash/clips/lmqb5oRJpBrAiaEDc?invite=cr-MSxPQkMsNDM2Nzg5MDc5&v=12",
             "percent": 100,
             "hz": 60
-            }
+        },
+        {
+            "user": "FoldedZero",
+            "link": "https://www.youtube.com/watch?v=d0mlnnUsWFs",
+            "hz": "60",
+            "percent": 100
+        }
     ]
 }
