--- a/data/9slongapplication.json
+++ b/data/9slongapplication.json
@@ -13,6 +13,12 @@
             "link": "https://www.youtube.com/watch?v=f-gjUwblr_8",
             "percent": 100,
             "hz": 240
-             }
+        },
+        {
+            "user": "finni1505",
+            "link": "https://medal.tv/de/games/geometry-dash/clips/linSTfzK69TwIleDj?invite=cr-MSxlZWwsMzY5MjUzOTQw&v=18",
+            "hz": "240",
+            "percent": 100
+        }
     ]
 }
