--- a/data/easiesttclship.json
+++ b/data/easiesttclship.json
@@ -32,6 +32,12 @@
             "link": "https://www.youtube.com/watch?v=d0mlnnUsWFs",
             "hz": "60",
             "percent": 100
+        },
+        {
+            "user": "finni1505",
+            "link": "https://medal.tv/de/games/geometry-dash/clips/lpHMbnLj4KbwPkJ1K?invite=cr-MSxNcWEsMzY5MjUzOTQw&v=8",
+            "hz": "60",
+            "percent": 100
         }
     ]
 }
