--- a/data/easiesttclship.json
+++ b/data/easiesttclship.json
@@ -38,6 +38,12 @@
             "link": "https://medal.tv/de/games/geometry-dash/clips/lpHMbnLj4KbwPkJ1K?invite=cr-MSxNcWEsMzY5MjUzOTQw&v=8",
             "hz": "60",
             "percent": 100
+        },
+        {
+            "user": "DuckInTheUsa",
+            "link": "https://youtu.be/tM4nuKfe5ys?si=DTZ3A2Ud1cldWPDh",
+            "hz": "60",
+            "percent": 100
         }
     ]
 }
