--- a/data/idontknowtheend.json
+++ b/data/idontknowtheend.json
@@ -43,6 +43,13 @@
             "link": "https://youtu.be/7kqaG_83uBQ",
             "hz": "180",
             "percent": 100
+        },
+        {
+            "user": "Zenos Sins",
+            "link": "https://www.youtube.com/watch?v=oWm8MDpKeZg",
+            "hz": "120",
+            "percent": 100,
+            "mobile": "true"
         }
     ]
 }
