--- a/data/easiesttclship.json
+++ b/data/easiesttclship.json
@@ -44,6 +44,13 @@
             "link": "https://youtu.be/tM4nuKfe5ys?si=DTZ3A2Ud1cldWPDh",
             "hz": "60",
             "percent": 100
+        },
+        {
+            "user": "Zenos Sins",
+            "link": "https://www.youtube.com/watch?v=oWm8MDpKeZg",
+            "hz": "60",
+            "percent": 100,
+            "mobile": "true"
         }
     ]
 }
