--- a/data/easiesttclship.json
+++ b/data/easiesttclship.json
@@ -43,7 +43,8 @@
             "user": "DuckInTheUsa",
             "link": "https://youtu.be/tM4nuKfe5ys?si=DTZ3A2Ud1cldWPDh",
             "hz": "60",
-            "percent": 100
+            "percent": 100,
+            "mobile": "true"
         },
         {
             "user": "Zenos Sins",
