--- a/data/idontknowtheend.json
+++ b/data/idontknowtheend.json
@@ -56,6 +56,12 @@
             "link": "https://www.youtube.com/watch?v=L06C4I087N4",
             "hz": "480",
             "percent": 100
+        },
+        {
+            "user": "CreeperJamie909",
+            "link": "https://medal.tv/games/geometry-dash/clips/ltTpqjqLoFjJrMDyn?invite=cr-MSxOaDEsMjAwMzMxODc2",
+            "hz": "240",
+            "percent": 100
         }
     ]
 }
