--- a/data/easiesttclship.json
+++ b/data/easiesttclship.json
@@ -52,6 +52,12 @@
             "hz": "60",
             "percent": 100,
             "mobile": "true"
+        },
+        {
+            "user": "Maxr",
+            "link": "https://medal.tv/games/geometry-dash/clips/lto7uK8HiKCWkS-Na?invite=cr-MSx5TDgsNDc0NzU4NTcw&v=300",
+            "hz": "60",
+            "percent": 100
         }
     ]
 }
