--- a/data/theeasytueml.json
+++ b/data/theeasytueml.json
@@ -25,6 +25,12 @@
             "link": "https://www.youtube.com/watch?v=d0mlnnUsWFs",
             "hz": "120",
             "percent": 100
+        },
+        {
+            "user": "Sadisyourlife",
+            "link": "https://youtu.be/JbWY9KlXn0U",
+            "hz": "120",
+            "percent": 100
         }
     ]
 }
