--- a/data/happyhank.json
+++ b/data/happyhank.json
@@ -1,7 +1,7 @@
 {
     "id": 127222284,
     "name": "Happy hank",
-    "author": ""zis76,
+    "author": "zis76",
     "creators": [],
     "verifier": "Megatron",
     "verification": "https://www.youtube.com/watch?v=waPkwZyQYG8",
