--- a/data/easiesttclship.json
+++ b/data/easiesttclship.json
@@ -58,6 +58,12 @@
             "link": "https://medal.tv/games/geometry-dash/clips/lto7uK8HiKCWkS-Na?invite=cr-MSx5TDgsNDc0NzU4NTcw&v=300",
             "hz": "60",
             "percent": 100
+        },
+        {
+            "user": "Sadisyourlife",
+            "link": "https://youtu.be/JbWY9KlXn0U",
+            "hz": "240",
+            "percent": 100
         }
     ]
 }
