--- a/data/9slongapplication.json
+++ b/data/9slongapplication.json
@@ -19,6 +19,12 @@
             "link": "https://medal.tv/de/games/geometry-dash/clips/linSTfzK69TwIleDj?invite=cr-MSxlZWwsMzY5MjUzOTQw&v=18",
             "hz": "240",
             "percent": 100
+        },
+        {
+            "user": "Sadisyourlife",
+            "link": "https://youtu.be/JbWY9KlXn0U",
+            "hz": "240",
+            "percent": 100
         }
     ]
 }
