--- a/data/happyhank.json
+++ b/data/happyhank.json
@@ -4,7 +4,7 @@
     "author": "zis76",
     "creators": [],
     "verifier": "Megatron",
-    "verification": "https://www.youtube.com/watch?v=waPkwZyQYG8",
+    "verification": "https://www.youtube.com/watch?v=elRt4BaQAWg",
     "percentToQualify": "100",
     "records": [
         {
