--- a/data/idontknowtheend.json
+++ b/data/idontknowtheend.json
@@ -1,7 +1,7 @@
 {
     "id": 126932396,
     "name": "I Dont Know the End",
-    "author": "DuckInTheUsa",
+    "author": "DuckInTheUSA",
     "creators": [],
     "verifier": "DuckInTheUsa",
     "verification": "https://www.youtube.com/watch?v=hcvC81EYcrU",
