--- a/data/9slongapplication.json
+++ b/data/9slongapplication.json
@@ -1,7 +1,7 @@
 {
     "id": 126747781,
     "name": "9s Long Application",
-    "author": "DuckInTheUsa",
+    "author": "DuckInTheUSA",
     "creators": [],
     "verifier": "DuckInTheUsa",
     "verification": "https://youtu.be/D1Qamr_acys",
