--- a/data/9slongapplication.json
+++ b/data/9slongapplication.json
@@ -3,7 +3,7 @@
     "name": "9s Long Application",
     "author": "DuckInTheUSA",
     "creators": [],
-    "verifier": "DuckInTheUsa",
+    "verifier": "DuckInTheUSA",
     "verification": "https://youtu.be/D1Qamr_acys",
     "percentToQualify": "100",
     "fps": "240",
