--- a/data/easiesttclship.json
+++ b/data/easiesttclship.json
@@ -40,7 +40,7 @@
             "percent": 100
         },
         {
-            "user": "DuckInTheUsa",
+            "user": "DuckInTheUSA",
             "link": "https://youtu.be/tM4nuKfe5ys?si=DTZ3A2Ud1cldWPDh",
             "hz": "60",
             "percent": 100,
