--- a/data/idontknowtheend.json
+++ b/data/idontknowtheend.json
@@ -3,7 +3,7 @@
     "name": "I Dont Know the End",
     "author": "DuckInTheUSA",
     "creators": [],
-    "verifier": "DuckInTheUsa",
+    "verifier": "DuckInTheUSA",
     "verification": "https://www.youtube.com/watch?v=hcvC81EYcrU",
     "percentToQualify": "100",
     "records": [
