--- a/data/peasantofship.json
+++ b/data/peasantofship.json
@@ -1,7 +1,7 @@
 {
     "id": 127751058,
     "name": "peasant of ship",
-    "author": "tfluffy",
+    "author": "tFluffy",
     "creators": [],
     "verifier": "tFluffy",
     "verification": "https://www.youtube.com/watch?v=Qi93ZXy_yvg",
