--- a/data/peasantofship.json
+++ b/data/peasantofship.json
@@ -19,6 +19,12 @@
             "link": "https://youtu.be/JbWY9KlXn0U",
             "hz": "240",
             "percent": 100
+        },
+        {
+            "user": "FJKR",
+            "link": "https://medal.tv/ru/games/geometry-dash/clips/lvS7KRissBsZJo1vi?invite=cr-MSxWSjksNDM2Nzg5MDc5&v=30",
+            "hz": "240",
+            "percent": 100
         }
     ]
 }
