--- a/data/theeasytueml.json
+++ b/data/theeasytueml.json
@@ -31,6 +31,12 @@
             "link": "https://youtu.be/JbWY9KlXn0U",
             "hz": "120",
             "percent": 100
+        },
+        {
+            "user": "Megatron",
+            "link": "https://www.youtube.com/watch?v=dwx-NtlLDlY",
+            "hz": "360",
+            "percent": 100
         }
     ]
 }
