--- a/data/peasantofship.json
+++ b/data/peasantofship.json
@@ -25,6 +25,12 @@
             "link": "https://medal.tv/ru/games/geometry-dash/clips/lvS7KRissBsZJo1vi?invite=cr-MSxWSjksNDM2Nzg5MDc5&v=30",
             "hz": "240",
             "percent": 100
+        },
+        {
+            "user": "FoldedZero",
+            "link": "https://www.youtube.com/watch?v=B48cJvKb8t4",
+            "hz": "240",
+            "percent": 100
         }
     ]
 }
