--- a/data/idontknowtheend.json
+++ b/data/idontknowtheend.json
@@ -74,6 +74,12 @@
             "link": "https://www.youtube.com/watch?v=SNbYLaV1g9I",
             "hz": "360",
             "percent": 100
+        },
+        {
+            "user": "ClawBuckle",
+            "link": "https://youtu.be/dzYFd9SZ4eg?si=_k3uJct4U8s6yzjD",
+            "hz": "240",
+            "percent": 100
         }
     ]
 }
