--- a/data/happyhank.json
+++ b/data/happyhank.json
@@ -18,6 +18,12 @@
             "link": "https://www.youtube.com/watch?v=B48cJvKb8t4",
             "hz": "240",
             "percent": 100
+        },
+        {
+            "user": "ClawBuckle",
+            "link": "https://youtu.be/t--GBjzKrUI",
+            "hz": "240",
+            "percent": 100
         }
     ]
 }
