--- a/data/happyhank.json
+++ b/data/happyhank.json
@@ -24,6 +24,12 @@
             "link": "https://youtu.be/t--GBjzKrUI",
             "hz": "240",
             "percent": 100
+        },
+        {
+            "user": "finni1505",
+            "link": "https://medal.tv/de/games/geometry-dash/clips/lFL5aIxWKUTW5_Xce?invite=cr-MSxXbkwsMzY5MjUzOTQw&v=30",
+            "hz": "240",
+            "percent": 100
         }
     ]
 }
