--- a/data/unknownwave2.json
+++ b/data/unknownwave2.json
@@ -18,6 +18,12 @@
             "link": "https://www.youtube.com/watch?v=tL73nZQaIiM",
             "percent": 100,
             "hz": 240
+        },
+        {
+            "user": "finni1505",
+            "link": "https://medal.tv/de/games/geometry-dash/clips/lG7TJhgTdwD32y8lU?invite=cr-MSw0MlUsMzY5MjUzOTQw&v=30",
+            "hz": "240",
+            "percent": 100
         }
     ]
 }
