--- a/data/unowned.json
+++ b/data/unowned.json
@@ -7,5 +7,11 @@
     "verification": "https://youtu.be/y8OYKd1-jiE",
     "percentToQualify": "100",
     "records": [
+        {
+            "user": "finni1505",
+            "link": "https://medal.tv/de/games/geometry-dash/clips/lGfbtBbkxaEBZIgF0?invite=cr-MSxoQXMsMzY5MjUzOTQw&v=30",
+            "hz": "240",
+            "percent": 100
+        }
     ]
 }
