--- a/data/theeasytueml.json
+++ b/data/theeasytueml.json
@@ -43,6 +43,12 @@
             "link": "https://youtu.be/wobCRDl2rHw?si=KP9X9Qs2e6fJNdtr",
             "hz": "120",
             "percent": 100
+        },
+        {
+            "user": "Fentanyl",
+            "link": "https://youtu.be/9fGHOL2WqoA",
+            "hz": "120",
+            "percent": 100
         }
     ]
 }
