--- a/data/unowned.json
+++ b/data/unowned.json
@@ -24,6 +24,11 @@
             "link": "https://www.youtube.com/watch?v=ADG1OSziI-M",
             "hz": "240",
             "percent": 100
-        }
+        },
+        {
+            "user": "CreeperJamie909",
+            "link": "https://medal.tv/games/geometry-dash/clips/lGAJrgTnWtViPZzjN?invite=cr-MSx5c1YsMjAwMzMxODc2&v=15",
+            "hz": "240",
+            "percent": 100
     ]
 }
