--- a/data/unowned.json
+++ b/data/unowned.json
@@ -29,6 +29,7 @@
             "user": "CreeperJamie909",
             "link": "https://medal.tv/games/geometry-dash/clips/lGAJrgTnWtViPZzjN?invite=cr-MSx5c1YsMjAwMzMxODc2&v=15",
             "hz": "240",
-            "percent": 100
+            "percent": 
+        }
     ]
 }
