--- a/data/unowned.json
+++ b/data/unowned.json
@@ -30,6 +30,12 @@
             "link": "https://medal.tv/games/geometry-dash/clips/lGAJrgTnWtViPZzjN?invite=cr-MSx5c1YsMjAwMzMxODc2&v=15",
             "hz": "240",
             "percent": 100
+        },
+        {
+            "user": "zis76",
+            "link": "https://youtu.be/W5zYZ5BjY6k",
+            "hz": "240",
+            "percent": 100
         }
     ]
 }
