--- a/data/unowned.json
+++ b/data/unowned.json
@@ -36,6 +36,12 @@
             "link": "https://youtu.be/W5zYZ5BjY6k",
             "hz": "240",
             "percent": 100
+        },
+        {
+            "user": "baku madarame",
+            "link": "https://youtu.be/1fyaTgDwsRQ?si=Y-nJ78nXcMjz7Yg1",
+            "hz": "480",
+            "percent": 100
         }
     ]
-}
+} 
