--- a/data/happyhank.json
+++ b/data/happyhank.json
@@ -2,7 +2,7 @@
     "id": 127222284,
     "name": "Happy hank",
     "author": "zis76",
-    "creators": [],
+    "creators": "zis76, Windboss07, Guyinthighhighs",
     "verifier": "Megatron",
     "verification": "https://www.youtube.com/watch?v=elRt4BaQAWg",
     "percentToQualify": "100",
