--- a/data/happyhank.json
+++ b/data/happyhank.json
@@ -3,7 +3,7 @@
     "name": "Happy hank",
     "author": "zis76",
     "creators": ["zis76", "Windboss07", "Guyinthighhighs"],
-    "verifier": "Megatron",
+    "verifier": "Rusty",
     "verification": "https://www.youtube.com/watch?v=elRt4BaQAWg",
     "percentToQualify": "100",
     "records": [
