--- a/data/unowned.json
+++ b/data/unowned.json
@@ -20,7 +20,7 @@
             "percent": 100
         },
         {
-            "user": "Megatron",
+            "user": "Rusty",
             "link": "https://www.youtube.com/watch?v=ADG1OSziI-M",
             "hz": "240",
             "percent": 100
