--- a/data/theeasytueml.json
+++ b/data/theeasytueml.json
@@ -33,7 +33,7 @@
             "percent": 100
         },
         {
-            "user": "Megatron",
+            "user": "Rusty",
             "link": "https://www.youtube.com/watch?v=dwx-NtlLDlY",
             "hz": "120",
             "percent": 100
